manifests/deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-container
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multi-container
  template:
    metadata:
      labels:
        app: multi-container
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80

        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
