manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multitool-client
spec:
  containers:
    - name: multitool
      image: wbitt/network-multitool
