manifests/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: multi-container
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      protocol: TCP
